@@ -16,6 +16,7 @@
 - extended `PROXY(endpoint, stream_function(ctrl))` by adding support for a custom handler
 - extended `REQUEST()` by adding `opt.writer {function(res)}` option
 - added missing `TotalAPI()` method
+- fixed `CONF.totalapi` key when initializing the framework
 
 ========================
 0.0.8
